Update gradle wrapper from version 5.3.1 to 7.2